--- a/clothmoth-treatment-in-melbourne.html
+++ b/clothmoth-treatment-in-melbourne.html
@@ -57,7 +57,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -118,7 +118,7 @@
                         <p>Cloth moths are pests which not only look disgusting but also destroy fabric and other materials. They feed mostly on animal fibers, especially wool, fur, silk, feathers, felt, and leather leaving behind clothes whose quality is destroyed. The animal fibres contain keratin, a fibrous protein that clothmoths can eat and digest. When in the open nature, the larvae of clothmoths feed on the nesting materials or carcasses of birds and mammals.</p>
                         <p>They mostly attack clothes that are heavily soiled with food stains or body oils. Contact with food and textiles that has been infested by the moths can lead to allergic reactions and irritations for humans and pets too. We cannot detect infestations of cloth moths easily and when we detect it, it will have already caused various harm to your clothing materials. To ensure the complete removal of clothes moths in the premises, it is best to contact a reliable pest control service to take care of the problem.</p>
                         <p class="text-left">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -154,12 +154,11 @@
                         <p>
                             Regular cleaning of the premises will help a great deal in keeping the place free from these pests. The techniques should work for small infestations, but if the problem is massive or you don’t want it to worsen early on, a professional service is required.
                         </p>
-                        <p>We provide 24 hours service to our customers in Melbourne for Clothmoth treatment to residential and commercial properties. Emergency Clothmoth treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                         <br>
                         <hr>
                         <br>
-                        <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                        <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        <p><strong>We provide 24 hours service to our customers in Melbourne for clothmoth treatment to residential and commercial properties. Emergency clothmoth treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                        <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -184,9 +183,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -227,7 +226,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -473,11 +472,18 @@
     </footer>
     
     <span class="floater">
-        <a href="tel:012020202">
-            <span class="icon">
-                <i class="fa fa-phone"></i>
-            </span>
-        </a>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
     </span>
     
     <!--Bootstrap 4.5 JS-->
