--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
   <link rel="stylesheet" href="./css/custom.css" />
 </head>
 <body>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5c36e579361b3372892f5493/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->    
+  
   <header>
     <nav class="navbar navbar-expand-md navbar-transparent">
       <!-- Brand -->
@@ -69,7 +83,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -115,10 +129,10 @@
           <div class="carousel-item active" style="background-image:url('./images/banner/p4.jpg');">
             <!-- <img alt="title_image" src="./images/banner/p4.jpg" class="d-block w-100"> -->
             <div class="carousel-caption">
-              <h1 data-animation="animate__animated animate__fadeInUp">Rats Treatment</h1>
+              <h1 data-animation="animate__animated animate__fadeInUp" id="small-h1">Rats/Mice/Rodents Treatment</h1>
               <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Rats Treatment Service is also given to our customers. Call us today for a free quote.</p>
               <!--<a role="button" class="btn btn-pri data-animation="animate__animated animate__fadeInUp"mary custom-button">Contact Us</a>-->
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
+              <a href="tel:+61408164401" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone-alt" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="carousel-item" style="background-image: url('./images/banner/p2.jpg');">
@@ -126,7 +140,7 @@
             <div class="carousel-caption">
               <h1 data-animation="animate__animated animate__fadeInUp">Cockroach Treatment</h1>
               <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Cockroach Treatment Service is also given to our customers. Call us today for a free quote.</p>
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
+              <a href="tel:+61408164401" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone-alt" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="carousel-item" style="background-image: url('./images/banner/p1.jpg');">
@@ -134,7 +148,7 @@
             <div class="carousel-caption">
               <h1 data-animation="animate__animated animate__fadeInUp">Ants Treatment</h1>
               <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Ants Treatment Service is also given to our customers. Call us today for a free quote.</p>
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
+              <a href="tel:+61408164401" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone-alt" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -155,7 +169,7 @@
           <div class="col-sm-4">
             <div class="feature-wrapper text-center">
               <span class="hovicon effect-9 sub-a">
-                <i class="fa fa-phone"></i>
+                <i class="fa fa-phone-alt"></i>
               </span>
               <h4 class="text-bold">Free Quotes Over Phone</h4>
             </div>
@@ -253,13 +267,13 @@
                 <img alt="title_image" class="" src="./images/services/rat.png" />
               </div>
               <div class="card-body">
-                <h5 class="card-title apple-font">Rats Treatment</h5>
+                <h5 class="card-title apple-font">Rats/Mice/Rodents Treatment</h5>
                 <p class="card-text">Rats, mice and other rodents in your home can be a huge pest problem. If you need Rats Treatment done for your home or office, call us now.</p>
                 <a href="rats-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.4s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/wasp.png" alt="Card image cap">
@@ -271,7 +285,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.6s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/possum.png" alt="Card image cap">
@@ -283,7 +297,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.8s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/moth.png" alt="Card image cap">
@@ -295,7 +309,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.4s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/beetle.png" alt="Card image cap">
@@ -307,7 +321,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.6s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/termite.png" alt="Card image cap">
@@ -319,7 +333,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn" data-wow-delay="0.8s">
             <div class="card">
               <div>
                 <img class="" src="./images/services/bird-mite.png" alt="Card image cap">
@@ -331,7 +345,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center service service-hidden">
+          <div class="text-center service service-hidden animate__animated animate__zoomIn">
             <div class="card">
               <div>
                 <img class="" src="./images/services/dropping.png" alt="Card image cap">
@@ -347,7 +361,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title pt-5 text-center">
-              <a href="#" class="main-button reverse-button" id="more-services">More Services &nbsp;<i class="fa fa-long-arrow-alt-right" aria-hidden="true"></i></a>
+              <a class="main-button reverse-button" id="more-services">More Services &nbsp;<i class="fa fa-long-arrow-alt-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -367,7 +381,7 @@
           <div class="col-lg-6 pt-5" data-wow-delay="0.6s">
             <p>When you have a pest problem or want to protect your home from future invaders, we apply our science-based approach to help identify the root of your problem and implement a solution made expressly for your home. Formula Pest Control is a top rated and well respected melbourne based Exterminator, that provides industry leading service at competitive prices.</p>
             <div class="text-left">
-              <a href="about-us.html" class="main-button">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp; <a href="#" class="main-button reverse-button"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp; Call Us Now</a>
+              <a href="about-us.html" class="main-button">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp; <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i>&nbsp;&nbsp; Call Us Now</a>
             </div>
           </div>
         </div>
@@ -416,16 +430,16 @@
                   <td>Starting from $90</td>
                 </tr>
                 <tr>
+                  <td>General Pest Control</td>
+                  <td>Starting from $150</td>
+                </tr>
+                <tr>
                   <td>Termites Inspection</td>
                   <td>Starting from $250</td>
                 </tr>
                 <tr>
                   <td>Possums removal</td>
                   <td>Starting from $280</td>
-                </tr>
-                <tr>
-                  <td>General Pest Inspection</td>
-                  <td>Starting from $150</td>
                 </tr>
                 <tr>
                   <td>Bedbugs Treatment</td>
@@ -514,9 +528,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -557,7 +571,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -803,9 +817,16 @@
     </footer>
     
     <span class="floater">
-      <a href="tel:012020202">
+      <a href="tel:+61408164401">
         <span class="icon">
-          <i class="fa fa-phone"></i>
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
         </span>
       </a>
     </span>
@@ -814,6 +835,38 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <!--Wow js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous"></script>
+    <script>
+       wow = new WOW(
+                      {
+                      boxClass:     'wow',      // default
+                      animateClass: 'animate__animated', // default
+                      offset:       0,          // default
+                      mobile:       true,       // default
+                      live:         true        // default
+                    }
+                    )
+                    wow.init();
+
+                    var clickTimes=0;
+document.getElementById('more-services').addEventListener("click",(()=>{
+    /*document.getElementsByClassName('hide-service').foreach((item)=>{
+        item.style.display="block";
+    });*/
+    clickTimes++;
+    document.querySelectorAll('.service-hidden').forEach((item,index)=>{
+        if(clickTimes===1&&index<3){
+            item.style.display="block";
+        }else if(clickTimes===2&&index<=5){
+            item.style.display="block";
+        }else if(clickTimes===3&&index===6){
+            item.style.display="block";
+        }
+    });
+    //document.getElementsByClassName('hide-service')[1].style.display="block";
+}));                    
+    </script>
     <script src="js/script.js"></script>
   </body>
   </html>
