--- a/possum-removal-in-melbourne.html
+++ b/possum-removal-in-melbourne.html
@@ -57,7 +57,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -118,7 +118,7 @@
                         <p>Possums while looking like an animal that is minding its own business can cause significant damage to human property. The most usual damage a possum does is the laying their waste materials possibly everywhere around your home/office. Possums are wild animals that could nest inside your house/surroundings and produce a lot of offsprings which can be even a bigger hassle to deal with. They are known to excrete a lot of waste materials, mess with your house pets, eat your food and basically give birth to more possums which can be upto 10 times the trouble you expected.</p>
                         <p>Possums also spread harmful diseases especially from their feaces. Diseases like Tuberculosis is infamous from being spread from a Possum. They also eat the food you left for your own pets and may transfer serious illnes to your loved ones. Most possums will break items around your house and cause chaos. They are also known to damage insulators, electric wires and appliances in your house. When insulators are damaged through cuts, there is an increased risk of causing fires that can lead to the burning of the entire property.</p>
                         <p class="text-left">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -151,12 +151,11 @@
                         <p>
                             Possums are capable of inhabiting your entire home. The popular way to get rid of them is to set traps because they are known to run into traps easily. When setting traps, make sure you use bait, which could be fruit, nut, or seeds. Possums caught in lethal or killing traps must be disposed of immediately as their carcasses are known to decompose and stink quickly leaving behind a foul odour and could transmit severe diseases. Possums that are trapped alive must be sent thousands of kilometers away from the trapped position so they can never return back.
                         </p>
-                        <p>We provide 24 hours service to our customers in Melbourne for Possums Removal to residential and commercial properties. Emergency Possums Removal service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                         <br>
                         <hr>
                         <br>
-                        <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                        <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        <p><strong>We provide 24 hours service to our customers in Melbourne for possum removal to residential and commercial properties. Emergency possum removal service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                        <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -181,9 +180,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -224,7 +223,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -470,11 +469,18 @@
     </footer>
     
     <span class="floater">
-        <a href="tel:012020202">
-            <span class="icon">
-                <i class="fa fa-phone"></i>
-            </span>
-        </a>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
     </span>
     
     <!--Bootstrap 4.5 JS-->
