--- a/birdmites-treatment-in-melbourne.html
+++ b/birdmites-treatment-in-melbourne.html
@@ -51,7 +51,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -112,7 +112,7 @@
                         <p>Bird mites are insects that live in the skin of birds and are pests that many people don’t think about. Even if they live on the skin of different birds including chickens, they can find their way into homes and other structures. This is when they can become a problem for humans. Although bird mites are a pest, they aren’t a parasite to humans. That is, they don’t need human blood to survive.</p>
                         <p>Bird mites need the blood of birds to complete their life cycle and survive but they still can bite humans. Symptoms of a bird mite bite are similar to bites of other insects and mites. You may develop small red bumps or a crawling sensation on your skin. Bird mite bites also cause itching, which can be severe at times. In the case of intense itching, constantly scratching can break the skin. If bacteria gets underneath your skin, this can lead to a secondary bacterial infection. Symptoms include: pain, redness, discharge, etc. Itching can also become so severe that it keeps you awake at night.</p>
                         <p class="text-left">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -145,12 +145,11 @@
                         <p>
                             To eradicate a bird mite population from the home, it is necessary to locate their breeding and nesting sites. Specific pesticides, applied according to the label and regulations, can then be applied in the nesting area in order to prevent future infestations. If you think you have bird mites in the house, the first step is to get this confirmed by a professional who can then locate the source of the infestation and take the necessary actions to eradicate it. This will typically involve the removal of the birds’ nest causing the problem, and the application of an approved insecticide. Other potentially infested areas will also be given an effective bird mite treatment to eradicate any that have migrated. This process is much more effective than attempting to tackle the problem with home remedies which do not guarantee complete removal of the infestation and do not necessarily get to the root of the problem.
                         </p>
-                        <p>We provide 24 hours service to our customers in Melbourne for Birdmites treatment to residential and commercial properties. Emergency Birdmites treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                         <br>
                         <hr>
                         <br>
-                        <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                        <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        <p><strong>We provide 24 hours service to our customers in Melbourne for birdmite treatment to residential and commercial properties. Emergency birdmite treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                        <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -175,9 +174,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -218,7 +217,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -464,11 +463,18 @@
     </footer>
     
     <span class="floater">
-        <a href="tel:012020202">
-            <span class="icon">
-                <i class="fa fa-phone"></i>
-            </span>
-        </a>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
     </span>
     
     <!--Bootstrap 4.5 JS-->
