--- a/carpet-beetle-treatment-in-melbourne.html
+++ b/carpet-beetle-treatment-in-melbourne.html
@@ -51,7 +51,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -112,7 +112,7 @@
                         <p>Carpet beetles can be pretty harmful even if these insects don't bite humans. They can cause a bumpy, itchy, rash that is sometimes mistaken for bed bug bites. Carpet beetles can also cause respiratory tract and eye irritation through airbourne fibres and other media. It often takes years for most people a long time to even find out that the itchyness and skin irritation they feel was caused by a Carpet Beetle infesting inside their house.</p>
                         <p>Carpet Beetle also spread Dermatitis and spread symptoms like intense itching and rash. In some affected victims, irritation of the respiratory tract and eyes may develop. They also cause Gastrointestinal Canthariasis. If carpet beetles get in contact with the foods left open, because of the saliva and feces they left on these foods, they pose a threat to human health as well as causing foods to go bad and infected with bacteria. When those bacteria enter the human body, they can cause infections and several serious diseases.</p>
                         <p class="text-left">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -148,12 +148,11 @@
                         <p>
                             It is not easy to protect yourself from exposure to carpet beetles without help from a professional pest controller. Carpet beetles can live and breed in places you just can't always get to. A professional pest plan will keep these, and a host of other pests, out as well. Get your home sealed up and keep these bugs out with a call to Formula Pest Control. We will also clean your carpets and furniture with steam, especially if the insects are seriously infested in your house. You'll be glad you did.
                         </p>
-                        <p>We provide 24 hours service to our customers in Melbourne for Carpet Beetle treatment to residential and commercial properties. Emergency Carpet Beetle treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                         <br>
                         <hr>
                         <br>
-                        <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                        <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        <p><strong>We provide 24 hours service to our customers in Melbourne for carpet beetle treatment to residential and commercial properties. Emergency carpet beetle treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                        <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -178,9 +177,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -221,7 +220,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -467,11 +466,18 @@
     </footer>
     
     <span class="floater">
-        <a href="tel:012020202">
-            <span class="icon">
-                <i class="fa fa-phone"></i>
-            </span>
-        </a>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
     </span>
     
     <!--Bootstrap 4.5 JS-->
