--- a/cockroach-treatment-in-melbourne.html
+++ b/cockroach-treatment-in-melbourne.html
@@ -129,7 +129,7 @@
                                 The one constant fact about cockroaches is that they are adaptable and capable of surviving even in some of the harshest environments. These insects have managed to spread across in virtually every continent.
                             </p>
                             <p class="text-center">
-                                <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                                <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                             </p>
                         </div>
                     </div>
@@ -169,12 +169,11 @@
                             <p>
                                 Cockroach control experts also figure out where the roaches are getting in and provide ways to stop them from coming back. Once the experts figure out the scope of the problem, they will let you know what must be done for cockroach removal at your property. You should know that it takes a professional for cockroach removal and fully preventing further infestation to your home or office.
                             </p>
-                            <p>We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency cockroach treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                             <br>
                             <hr>
                             <br>
-                            <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                            <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <p><strong>We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency cockroach treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                            <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </div>
                     </div>
                 </div>
@@ -200,9 +199,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -243,7 +242,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -489,12 +488,19 @@
     </footer>
             
             <span class="floater">
-                <a href="tel:012020202">
-                    <span class="icon">
-                        <i class="fa fa-phone"></i>
-                    </span>
-                </a>
-            </span>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
+    </span>
             
             <!--Bootstrap 4.5 JS-->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
