--- a/spiders-treatment-in-melbourne.html
+++ b/spiders-treatment-in-melbourne.html
@@ -57,7 +57,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -123,7 +123,7 @@
                         <br>
                         <p>Professional Treatment is highly suggested as the diagnosis and necessary treatment depend on the type of spider. A spider bite often has a white ring around it. These spiders build their webs under logs, plants, or rocks, in dark places in garages and outhouses and most of the time in the corners around your Home/Office.</p>
                         <p class="text-center">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -159,12 +159,11 @@
                             <p>
                               Plants that is near or touching a home is extremely attractive for spiders, as it allows for easy web building. Whenever possible, we recommend trimming the plants touching your house away from the home or building. As insects are a primary food source, spiders tend to populate areas of high insect activity. Our spider treatment process will focus on both eliminating the spider infestation, cobwebs and getting rid of their food source i.e. other pests.
                             </p>
-                            <p>We provide 24 hours service to our customers in Melbourne for Spiders treatment to residential and commercial properties. Emergency Spiders treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                             <br>
                             <hr>
                             <br>
-                            <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                            <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <p><strong>We provide 24 hours service to our customers in Melbourne for spiders treatment to residential and commercial properties. Emergency spiders treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                            <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </div>
                     </div>
                 </div>
@@ -189,9 +188,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -232,7 +231,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -478,12 +477,19 @@
     </footer>
             
             <span class="floater">
-                <a href="tel:012020202">
-                    <span class="icon">
-                        <i class="fa fa-phone"></i>
-                    </span>
-                </a>
-            </span>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
+    </span>
             
             <!--Bootstrap 4.5 JS-->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
