--- a/termites-treatment-in-melbourne.html
+++ b/termites-treatment-in-melbourne.html
@@ -51,7 +51,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -122,7 +122,7 @@
                               Areas where moisture is prominent attract termites first. So, if you’re looking for termites in your home or office, you must check your bathrooms first. Termites will create loose tiles, sagging ceilings and puncture holes in the drywall. These cause significant physical and financial damage to your structure. Apart from the physical and financial damage, termites also create health risks but are not a direct threat to humans. When a colony of termites move through your home, it accumulates dust and wood particles into the air which can cause allergic reactions and even asthma attacks to some.
                             </p>
                             <p class="text-center">
-                                <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                                <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                             </p>
                         </div>
                     </div>
@@ -158,14 +158,11 @@
                             <p>
                               Termite removal experts at Formula Pest Control suggest you more than one methods of termite control at your property. Once the scope of the problem is identified, the experts figure out what must be done for termite removal and provide you first-class service. A regular termite inspection by an experienced termite inspector is recommended. Regular inspections don’t help in complete termite removal but they definitely limit the extent of damage caused.
                             </p>
-                            <p>
-                              We provide 24 hours service to our customers in Melbourne for termite treatment to residential and commercial properties. Call us today for a free quote. It is always better to act quickly rather than wait.
-                            </p>
                             <br>
                             <hr>
                             <br>
-                            <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                            <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <p><strong>We provide 24 hours service to our customers in Melbourne for termite treatment to residential and commercial properties. Emergency termite treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                            <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </div>
                     </div>
                 </div>
@@ -191,9 +188,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -234,7 +231,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -480,12 +477,19 @@
     </footer>
             
             <span class="floater">
-                <a href="tel:012020202">
-                    <span class="icon">
-                        <i class="fa fa-phone"></i>
-                    </span>
-                </a>
-            </span>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
+    </span>
             
             <!--Bootstrap 4.5 JS-->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
