--- a/wasps-treatment-in-melbourne.html
+++ b/wasps-treatment-in-melbourne.html
@@ -57,7 +57,7 @@
         <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
         <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
@@ -122,7 +122,7 @@
                         <br>
                         <p>Wasps and bees can be a serious nuisance problem throughout Australia, particularly late in the summer when certain yellowjacket wasps come at garbage and outdoor food areas. Not to mention, the hive they create which in turn creates a lot of noise and practically makes the area unapproachable.</p>
                         <p class="text-center">
-                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                            <a href="tel:+61408164401" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                         </p>
                     </div>
                 </div>
@@ -158,12 +158,11 @@
                         <p>
                             At Formula Pest Control, we find the nest and take care of it in a safe and reliable way. But special wasps like Hornets nest in very high places, such as the highest trunks of trees. Once the nest has been located, we will treat it and remove it freeing you from your Wasp/Bees problem. 
                         </p>
-                        <p>We provide 24 hours service to our customers in Melbourne for Wasps treatment to residential and commercial properties. Emergency Wasps treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
                         <br>
                         <hr>
                         <br>
-                        <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
-                        <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        <p><strong>We provide 24 hours service to our customers in Melbourne for wasps/bees treatment to residential and commercial properties. Emergency wasps/bees treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</strong></p>
+                        <a href="tel:+61408164401" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
                     </div>
                 </div>
             </div>
@@ -188,9 +187,9 @@
             </div>
             <hr class="mb-4 mt-0 d-inline-block mx-auto">
             <!-- Links -->
-            <p><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Doncaster VIC 3108</a></p>
-            <p><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
-            <p><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> +61 408 164 401</a></p>
+            <p style="line-height: 20px;"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Thomastown, Melbourne VIC 3074</a></p>
+            <p><a href="mailto:formulapestcontrol@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> formulapestcontrol@gmail.com</a></p>
+            <p><a href="tel:+61408164401"><i class="fa fa-phone-alt" aria-hidden="true"></i> +61 408 164 401</a></p>
             <br />
             <div class="row d-flex justify-content-around">
               <div class="col-2 footer-social">
@@ -231,7 +230,7 @@
                   <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                 </li>
                 <li>
-                  <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+                  <a href="rats-treatment-in-melbourne.html">Rats/Mice/Rodents Treatment</a>
                 </li>
                 <li>
                   <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
@@ -477,11 +476,18 @@
     </footer>
     
     <span class="floater">
-        <a href="tel:012020202">
-            <span class="icon">
-                <i class="fa fa-phone"></i>
-            </span>
-        </a>
+      <a href="tel:+61408164401">
+        <span class="icon">
+          <i class="fa fa-phone-alt"></i>
+        </span>
+      </a>
+    </span>
+    <span class="floater" style="bottom: 30px;">
+      <a href="https://api.whatsapp.com/send?phone=+61408164401" target="_blank">
+        <span class="icon icon-1" style="padding: 14px 15px;">
+          <i class="fab fa-whatsapp" aria-hidden="true" style="font-size: 20px;"></i>
+        </span>
+      </a>
     </span>
     
     <!--Bootstrap 4.5 JS-->
